Adding missing endif

--- a/uoll/functional/ban macro.razor
+++ b/uoll/functional/ban macro.razor
@@ -9,6 +9,7 @@ while insysmsg 'added'
     hotkey 'Next Humanoid Target' 
     hotkey 'Add Target To: pku'
     lasttarget
-    endwhile 
-    if not hidden
+endwhile 
+if not hidden
     useskill 'hiding'
+endif
