--- a/uoll/functional/camping for stats.razor
+++ b/uoll/functional/camping for stats.razor
@@ -1,7 +1,7 @@
 //script will raise strength and intelligence to 100
 //assumes you have boards on you and 700 skill base
 //skills should be all marked as locked or up, with camping at 0
-//strength and intelligence locked up
+//strength and intelligence locked up. can edit values for desired goal, change dexterity etc.
 while int < 100 or str
     dclicktype 3553 backpack
     wait 500
